--- a/payroll/guidance/tax-obligations-psb.html
+++ b/payroll/guidance/tax-obligations-psb.html
@@ -125,42 +125,40 @@
                <div class="tabpanels">
    
  <details id="tab1"><summary>PSB worker</summary>
-
-<p>Generally, the PSB must:</p>
-<ul class="fa-ul">
-<li><span class="fas fa-check fa-li fa-lg text-success"> </span> <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t2.html">File T2  returns</a> <small>- <strong>Not eligible</strong> to claim the same <a href="#psb-special" aria-controls="psb-special" class="overlay-lnk" role="button">tax deductions and expenses <span class="far fa-question-circle"></span></a></small></li>
-<li><span class="fas fa-check fa-li fa-lg text-success"> </span> <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/corporations/corporation-payments/paying-your-balance-corporation-tax/balance-day.html">Remit (pay) the income tax</a> <small> - Same as regular corporations</small> </li>
-</ul>
-<p class="mrgn-tp-lg">Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/corporations.html">Corporations</a></p>
-
-<h3>Payroll obligations</h3>
-<p>The PSB must withhold and remit deductions for any employees of the PSB's corporation (same as regular corporations). They must also report on a slip any payment made to their employees.</p>
-
-<p class="mrgn-tp-lg">Continue to: <a href="#tab1">Employee/Employer</a></p>
+<p>Understanding the payer's tax obligations:</p>
+<ul>
+<li><a href="#2a">Reporting the income earned on the income tax return</a> </li>
+<li><a href="#1b">Contributing to the CPP/QPP, EI and QPIP</a> </li>
+<li><a href="#1c">Withholding, remitting and reporting deductions for employees of the PSB</a> </li>
+</ul> 
 
 
-<h3>Reporting the payment on the income tax return</h3>
+<h2 id="2a">Reporting the income earned on the income tax return</h2>
 <p>Generally, the payer <strong>must</strong> provide the PSB worker with a slip which includes any fees or other amounts paid for services.</p>
 
-<p>The PSB worker includes the amount of the payment received from the payer in their calculation of income earned using one of the following form when filing their income tax return:an amount the payment made to the worker in their calculation of business expenses when filing their income tax return:</p>
-<ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
-<li class="cnjnctn-col"><h4>T1 return</h4> 
-<p><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t2125.html">Form T2125</a>, Statement of Business or Professional Activities</p>
+<p>The PSB includes the amount of the payment received from the payer in their calculation of income earned using <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t2125.html">Form T2125</a>, Statement of Business or Professional Activities when filing their T2 return. </p>
 
- <p class="mrgn-tp-lg">Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/tax-return/completing-a-tax-return/personal-income/self-employment-income-lines-13499-14299-gross-income-lines-13500-14300-net-income.html">Lines 13499 to 14300 – Self-employment income </a></p>
-</li>
-
-<li class="cnjnctn-col"><h4>T2 return</h4> 
-<p><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t2sch125.html">Schedule 125</a>, Income Statement Information</p>
+<h3>Tax deductions, tax rates and eligible expenses for a PSB</h3>
+<p>The PSB is <strong>not eligible</strong> to claim the same <a href="#psb-special" aria-controls="psb-special" class="overlay-lnk" role="button">tax deductions and expenses <span class="far fa-question-circle"></span>.</p>
 
  <p class="mrgn-tp-lg">Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/corporations/corporation-income-tax-return/completing-your-corporation-income-tax-t2-return.html">Completing your corporation income tax return </a></p>
-</li>	
+
+<details><summary>Examples of <strong>non-compliance</strong> situation for PSB corporations</summary>
+<ul>
+<li>Not reporting non-active business income on line 207 of the T2 returns and did not complete Schedule 7 </li>
+<li>Claiming the small business deduction on line 430 of the T2  return </li>
+<li>Claiming other deductions that was not allowed on the T2 return </li>
+<li>Claiming salary expense on the T2 return </li>
+<li>Not filing T2 returns </li>
+<li>Not registering for the GST/HST or filed the required returns </li>
 </ul>
+</details>
 
 <p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/payroll-deductions-contributions/special-payments/fees-other-amounts-services.html">Payments of fees for services</a></p>
 
-<h3>Contributing to the CPP/QPP, EI and QPIP</h3>
-<p>Generally, the PSB worker calculates their contributions and reports the following amounts when they fill out their <strong>T2 corporation income tax return</strong>:</p>
+
+<h2 id="2b">Contributing to the CPP/QPP, EI and QPIP</h2>
+<p>Generally, the PSB includes the amount of the payment received from the payer in their calculation of the following contributions when filing their income tax return:</p>
 <ul class="fa-ul mrgn-bttm-md">
 <li><span class="fas fa-exclamation-triangle fa-li text-warning"></span> EI <small>- <strong>Only</strong> if the PSB worker participates in the special EI program</small></li>
 <li><span class="fas fa-check fa-li text-success"></span> CPP <small>- <strong>Both</strong> employer and employee portion</small></li> 
@@ -174,33 +172,26 @@
 <li> <a href="https://www.revenuquebec.ca/en/businesses/source-deductions-and-employer-contributions/calculating-source-deductions-and-employer-contributions/quebec-parental-insurance-plan-qpip-premiums/">Québec Parental Insurance Plan (QPIP) | Revenu Québec</a></li>
 </ul>
 
-<h3>Withholding and remitting the GST/HST</h3>
-<p>For the PSB, the GST/HST obligations are the same as other corporations. </p>
+<h2 id="2c">Withholding, remitting and reporting deductions for employees of the PSB</h2>
+<p>The PSB must withhold, remit and report deductions for any employees of the PSB's corporation. This is the same as regular corporations. They must also report on a slip any payment made to their employees.</p>
 
-<p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/gst-hst-businesses.html">GST/HST for businesses</a></p>
-
-<h3>Example of non-compliance</h3>
-
-<p>Examples of <strong>non-compliance</strong> situation for PSB corporations: </p>
-<ul>
-<li>Not reporting non-active business income on line 207 of the T2 returns and did not complete Schedule 7 </li>
-<li>Claiming the small business deduction on line 430 of the T2  return </li>
-<li>Claiming other deductions that was not allowed on the T2 return </li>
-<li>Claiming salary expense on the T2 return </li>
-<li>Not filing T2 returns </li>
-<li>Not registering for the GST/HST or filed the required returns </li>
-</ul>
+<p class="mrgn-tp-lg">Continue to: <a href="https://test.canada.ca/cra-arc/payroll/guidance/tax-obligations-employee.html">Employee and employer relationship</a></p>
 
  </details>
 
- <details id="tab2"> <summary>Payer</summary>
+<details id="tab2"> <summary>Payer</summary>
+<p>Understanding the payer's tax obligations:</p>
+<ul>
+<li><a href="#1A">Withholding, remitting and reporting deductions from the payment</a> </li>
+<li><a href="#2B">Reporting the payment on the income tax return</a> </li>
+</ul> 
 
-<h3>Withholding, remitting and reporting deductions from the payment</h3>
+<h2 id="1A">Withholding, remitting and reporting deductions from the payment</h2>
 <p>Generally, if the payer pays a fee to a PSB to provide a service outside of an employment relationship or tenure of office, the payer <strong>must</strong> fill out a T4A slip. This includes payments of fees for services between businesses, including sole proprietors and corporations. Depending on the situation, the payer may need to fill out a T4A-NR, T5018 or T1204 instead.</p>
 
 <p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/payroll-deductions-contributions/special-payments/fees-other-amounts-services.html">Payments of fees for services</a></p>
 
-<h3>Reporting the payment on the income tax return</h3>
+<h2 id="1B">Reporting the payment on the income tax return</h2>
 <p>Generally, the payer includes the payment made to the worker in their calculation of business expenses using one of the following form when filing their income tax return:</p>
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
 <li class="cnjnctn-col"><h4>T1 return</h4> 
