--- a/payroll/guidance/tax-obligations-psb.html
+++ b/payroll/guidance/tax-obligations-psb.html
@@ -117,14 +117,14 @@
 
 <p>Understanding the tax obligations based on the individual:</p>
 <ul>
-<li><a href="#tab1" class="wb-tabs-ext">PSB worker</a> </li>
+<li><a href="#tab1" class="wb-tabs-ext">PSB</a> </li>
 <li><a href="#tab2" class="wb-tabs-ext">Payer</a> - Payments made to a PSB</li>
 </ul>   
 
  <div class="wb-tabs">
                <div class="tabpanels">
    
- <details id="tab1"><summary>PSB worker</summary>
+ <details id="tab1"><summary>PSB</summary>
 <p>Understanding the payer's tax obligations:</p>
 <ul>
 <li><a href="#2a">Reporting the income earned on the income tax return</a> </li>
@@ -134,7 +134,7 @@
 
 
 <h2 id="2a">Reporting the income earned on the income tax return</h2>
-<p>Generally, the payer <strong>must</strong> provide the PSB worker with a slip which includes any fees or other amounts paid for services.</p>
+<p>Generally, the payer <strong>must</strong> provide the PSB with a slip which includes any fees or other amounts paid for services.</p>
 
 <p>The PSB includes the amount of the payment received from the payer in their calculation of income earned using <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t2125.html">Form T2125</a>, Statement of Business or Professional Activities when filing their T2 return. </p>
 
@@ -160,9 +160,9 @@
 <h2 id="2b">Contributing to the CPP/QPP, EI and QPIP</h2>
 <p>Generally, the PSB includes the amount of the payment received from the payer in their calculation of the following contributions when filing their income tax return:</p>
 <ul class="fa-ul mrgn-bttm-md">
-<li><span class="fas fa-exclamation-triangle fa-li text-warning"></span> EI <small>- <strong>Only</strong> if the PSB worker participates in the special EI program</small></li>
+<li><span class="fas fa-exclamation-triangle fa-li text-warning"></span> EI <small>- <strong>Only</strong> if the PSB participates in the special EI program</small></li>
 <li><span class="fas fa-check fa-li text-success"></span> CPP <small>- <strong>Both</strong> employer and employee portion</small></li> 
-<li><span class="fas fa-check fa-li text-success"></span> QPIP <small>- <strong>Only</strong> if the PSB worker works in the  <strong>Province of Quebec</strong></small></li>
+<li><span class="fas fa-check fa-li text-success"></span> QPIP <small>- <strong>Only</strong> if the PSB works in the  <strong>Province of Quebec</strong></small></li>
 </ul>
 
 <p>Learn more: </p>
