--- a/payroll/guidance/tax-obligations-psb.html
+++ b/payroll/guidance/tax-obligations-psb.html
@@ -136,13 +136,10 @@
 <h2 id="2a">Reporting the income earned on the income tax return</h2>
 <p>Generally, the payer <strong>must</strong> provide the PSB with a slip which includes any fees or other amounts paid for services.</p>
 
-<p>The PSB includes the amount of the payment received from the payer in their calculation of income earned using <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t2125.html">Form T2125</a>, Statement of Business or Professional Activities when filing their T2 return. </p>
+<p>The PSB includes the amount of the payment received from the payer in their calculation of income earned using <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t2sch125.html">Schedule 125</a>, Income Statement Information when filing their T2 return. </p>
 
 <h3>Tax deductions, tax rates and eligible expenses for a PSB</h3>
-<p>The PSB is <strong>not eligible</strong> to claim the same <a href="#psb-special" aria-controls="psb-special" class="overlay-lnk" role="button">tax deductions and expenses <span class="far fa-question-circle"></span>.</p>
-
- <p class="mrgn-tp-lg">Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/corporations/corporation-income-tax-return/completing-your-corporation-income-tax-t2-return.html">Completing your corporation income tax return </a></p>
-
+<p>The PSB is <strong>not eligible</strong> to claim the same <a href="#psb-special" aria-controls="psb-special" class="overlay-lnk" role="button">tax deductions and expenses <span class="far fa-question-circle"></span></a>.</p>
 <details><summary>Examples of <strong>non-compliance</strong> situation for PSB corporations</summary>
 <ul>
 <li>Not reporting non-active business income on line 207 of the T2 returns and did not complete Schedule 7 </li>
@@ -154,7 +151,11 @@
 </ul>
 </details>
 
-<p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/payroll-deductions-contributions/special-payments/fees-other-amounts-services.html">Payments of fees for services</a></p>
+ <p>Learn more:</p>
+	<ul> 
+<li><a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/corporations/corporation-income-tax-return/completing-your-corporation-income-tax-t2-return.html">Completing your corporation income tax return </a></li>
+<li><a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/payroll-deductions-contributions/special-payments/fees-other-amounts-services.html">Payments of fees for services</a></li>
+	</ul>
 
 
 <h2 id="2b">Contributing to the CPP/QPP, EI and QPIP</h2>
