--- a/payroll/guidance/tax-obligations-psb.html
+++ b/payroll/guidance/tax-obligations-psb.html
@@ -125,7 +125,7 @@
                <div class="tabpanels">
    
  <details id="tab1"><summary>PSB</summary>
-<p>Understanding the payer's tax obligations:</p>
+<p>Understanding the PSB's tax obligations:</p>
 <ul>
 <li><a href="#1a">Reporting the income earned on the income tax return</a> </li>
 <li><a href="#1b">Contributing to the CPP/QPP, EI and QPIP</a> </li>
