--- a/payroll/guidance/tax-obligations-self.html
+++ b/payroll/guidance/tax-obligations-self.html
@@ -123,6 +123,12 @@
                <div class="tabpanels">
    
  <details id="tab1"><summary>Self-employed worker</summary>
+<p>Understanding the self-employed's tax obligations:</p>
+<ul>
+<li><a href="#1a">Reporting the income earned on the income tax return</a> </li>
+<li><a href="#1b">Contributing to the CPP/QPP, EI and QPIP</a> </li>
+<li><a href="#1c">Withholding, remitting and reporting deductions for employees of the self-employed worker</a> </li>
+</ul> 
 
 <h3>Income tax obligations</h3>
 <p>Generally, the self-employed worker calculates and reports the following amounts when they fill out their <strong>T1 income tax and benefit return</strong>:</p>
@@ -159,8 +165,14 @@
 </details>
 
  <details id="tab2"><summary>Payer</summary>
+<p>Understanding the payer's tax obligations:</p>
+<ul>
+<li><a href="#1A">Withholding and remitting deductions from the payment</a> </li>
+<li><a href="#1B">Reporting the payment on the slip</a> </li>
+<li><a href="#2C">Reporting the payment on the income tax return</a> </li>
+</ul> 
 
-<h3>Withholding, remitting and reporting deductions on the payment</h3>
+<h2 id="1A">Withholding and remitting deductions from the payment</h2>
 <p>Generally, the payer <strong>does not</strong> withhold or remit the following deductions on the payment made to the self-employed worker:</p>
 <ul class="fa-ul mrgn-bttm-md">
 <li><span class="fas fa-times text-danger fa-li"></span> Income tax <small>- <strong>Do not</strong> withhold or remit</small></li>
@@ -170,14 +182,13 @@
 </ul>
 <p class="mrgn-tp-lg">Learn more: <a href="https://test.canada.ca/cra-arc/payroll/calculate/when/index.html">Get ready to make deductions</a></p>
 
- 
-<h3>Reporting the payment on a slip</h3>
+ <h2 id="1B">Reporting the payment on the slip</h2>
 <p>Generally, the payer must report the payment made to the self-employed worker on a T4A slip. Depending on the situation, the payer may need to fill out a T4A-NR instead.</p>
 
 <p class="mrgn-tp-lg">Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/completing-filing-information-returns.html">Fill out the slips and summaries</a></p>
 
 
-<h3>Reporting the payment on the income tax return</h3>
+<h2 id="1B">Reporting the payment on the income tax return</h2>
 <p>Generally, the payer includes the payment made to the worker in their calculation of business expenses using one of the following form when filing their income tax return:</p>
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
 <li class="cnjnctn-col"><h4>T1 return</h4> 
