--- a/payroll/guidance/tax-obligations-self.html
+++ b/payroll/guidance/tax-obligations-self.html
@@ -175,10 +175,10 @@
 <h2 id="1A">Withholding and remitting deductions from the payment</h2>
 <p>Generally, the payer <strong>does not</strong> withhold or remit the following deductions on the payment made to the self-employed worker:</p>
 <ul class="fa-ul mrgn-bttm-md">
-<li><span class="fas fa-times text-danger fa-li"></span> Income tax <small>- <strong>Do not</strong> withhold or remit</small></li>
-<li><span class="fas fa-times text-danger fa-li"></span> EI <small>- <strong>Do not</strong> withhold or remit</small></li> 	
-<li><span class="fas fa-times text-danger fa-li"></span> CPP <small>- <strong>Do not</strong> withhold or remit</small></li> 
-<li><span class="fas fa-times text-danger fa-li"></span> GST/HST <small>- <strong>Do not</strong> remit</small></li> 
+<li><span class="fas fa-times text-danger fa-li"></span> Income tax </li>
+<li><span class="fas fa-times text-danger fa-li"></span> EI </li> 	
+<li><span class="fas fa-times text-danger fa-li"></span> CPP </li> 
+<li><span class="fas fa-times text-danger fa-li"></span> GST/HST </li> 
 </ul>
 <p class="mrgn-tp-lg">Learn more: <a href="https://test.canada.ca/cra-arc/payroll/calculate/when/index.html">Get ready to make deductions</a></p>
 
