--- a/payroll/guidance/tax-obligations-employee.html
+++ b/payroll/guidance/tax-obligations-employee.html
@@ -121,26 +121,21 @@
  <div class="wb-tabs">
                <div class="tabpanels">
     <details id="tab1"><summary>Employee</summary>
-<p>On this page:</p>
+<p>Understanding the employee's tax obligations:</p>
 <ul>
-<li><a href="#1a">Income tax obligations</a> </li>
-<li><a href="#2b">Canada Pension Plan contributions</a> </li>
-<li><a href="#3c">Quebec Pension Plan contributions</a> </li>
-<li><a href="#4d">Employment Insurance contributions</a> </li>
-<li><a href="#5e">GST/HST obligations</a> </li>
+<li><a href="#1a">Reporting the income earned on the income tax return</a> </li>
 </ul> 
+
 
 <h3 id="1a">Income tax obligations</h3>
 
  </details>
  <details id="tab2"><summary>Employer</summary>
-<p>On this page:</p>
+<p>Understanding the employer's tax obligations:</p>
 <ul>
-<li><a href="#1A">Income tax obligations</a> </li>
-<li><a href="#2B">Canada Pension Plan contributions</a> </li>
-<li><a href="#3C">Quebec Pension Plan contributions</a> </li>
-<li><a href="#4D">Employment Insurance contributions</a> </li>
-<li><a href="#5E">GST/HST obligations</a> </li>
+<li><a href="#1A">Withholding and remitting deductions</a> </li>
+<li><a href="#1B">Reporting on the slip</a> </li>
+<li><a href="#2C">Reporting the payment on the income tax return</a> </li>
 </ul> 
 
 <h5>Withholding and remitting deductions</h5>
