--- a/payroll/guidance/tax-obligations-self.html
+++ b/payroll/guidance/tax-obligations-self.html
@@ -180,12 +180,12 @@
 <li><span class="fas fa-times text-danger fa-li"></span> CPP </li> 
 <li><span class="fas fa-times text-danger fa-li"></span> GST/HST </li> 
 </ul>
-<p class="mrgn-tp-lg">Learn more: <a href="https://test.canada.ca/cra-arc/payroll/calculate/when/index.html">Get ready to make deductions</a></p>
+<p>Learn more: <a href="https://test.canada.ca/cra-arc/payroll/calculate/when/index.html">Get ready to make deductions</a></p>
 
  <h2 id="1B">Reporting the payment on the slip</h2>
 <p>Generally, the payer must report the payment made to the self-employed worker on a T4A slip. Depending on the situation, the payer may need to fill out a T4A-NR instead.</p>
 
-<p class="mrgn-tp-lg">Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/completing-filing-information-returns.html">Fill out the slips and summaries</a></p>
+<p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/completing-filing-information-returns.html">Fill out the slips and summaries</a></p>
 
 
 <h2 id="1B">Reporting the payment on the income tax return</h2>
