--- a/payroll/guidance/tax-obligations-psb.html
+++ b/payroll/guidance/tax-obligations-psb.html
@@ -176,7 +176,7 @@
 <h2 id="1c">Withholding, remitting and reporting deductions for employees of the PSB</h2>
 <p>The PSB must withhold, remit and report deductions for any employees of the PSB's corporation. This is the same as regular corporations. They must also report on a slip any payment made to their employees.</p>
 
-<p class="mrgn-tp-lg">Continue to: <a href="https://test.canada.ca/cra-arc/payroll/guidance/tax-obligations-employee.html">Employee and employer relationship</a></p>
+<p>Continue to: <a href="https://test.canada.ca/cra-arc/payroll/guidance/tax-obligations-employee.html">Employee and employer relationship</a></p>
 
  </details>
 
