--- a/payroll/guidance/tax-obligations-self.html
+++ b/payroll/guidance/tax-obligations-self.html
@@ -109,7 +109,7 @@
 <p>Content has been updated for <strong>clarity, completeness and plain language</strong>, including <strong>additional examples and legislative references</strong>.</p>
 </div>
 
-<p>Depending if the worker is an <strong>employee</strong>, an <strong>incorporated employee</strong> or is <strong>self-employed</strong> the tax obligations may be different.</p>
+<p>Depending if the worker is an <strong>employee</strong>, <strong>self-employed</strong> or an <strong>incorporated employee</strong> the tax obligations may be different.</p>
 
 <p><i class="fas fa-user-tag fa-2xl text-primary"></i> If you are not sure if the worker is self-employed, continue to: <a href="factors.html">Determine if the worker is an employee or self-employed</a></p>
 
