--- a/subway/uht/complete-return.html
+++ b/subway/uht/complete-return.html
@@ -943,7 +943,7 @@ html:lang(fr) .cnjnctn-or:before {
         <details>
           <summary>Fair market value (FMV)</summary>
           <p>To calculate the tax you owe using the fair market value of a residential property, you must file an election by completing this section.</p>
-          <p>An owner electing to use fair market value for the calculation, has to get a <strong>written appraisal</strong> of the property. The written appraisal must be determined by an accredited, professional, real estate appraiser operating at arm’s length to the owner. The intended use of the written appraisal must be to help in the administration of the Underused Housing Tax Act.</p>
+          <p>An owner electing to use fair market value for the calculation has to get a <strong>written appraisal</strong> of the property. The written appraisal must be determined by an accredited, professional, real estate appraiser operating at arm’s length to the owner. The intended use of the written appraisal must be to help in the administration of the Underused Housing Tax Act.</p>
           <details>
             <summary>Acceptable Professional Associations and Designations </summary>
             <ul>
