--- a/payroll/guidance/tax-obligations-psb.html
+++ b/payroll/guidance/tax-obligations-psb.html
@@ -136,10 +136,27 @@
 <h2 id="1a">Reporting the income earned on the income tax return</h2>
 <p>Generally, the payer <strong>must</strong> provide the PSB with a slip which includes any fees or other amounts paid for services.</p>
 
-<p>The PSB includes the amount of the payment received from the payer in their calculation of income earned using <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t2sch125.html">Schedule 125</a>, Income Statement Information when filing their T2 return. </p>
+<p>The PSB includes the amount of the payment received from the payer in their calculation of income earned using <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t2sch125.html">Schedule 125</a>, Income Statement Information when filing their T2 return. 
 
-<h3>Tax deductions, tax rates and eligible expenses for a PSB</h3>
-<p>The PSB is <strong>not eligible</strong> to claim the same <a href="#psb-special" aria-controls="psb-special" class="overlay-lnk" role="button">tax deductions and expenses <span class="far fa-question-circle"></span></a>.</p>
+<p>The PSB is <strong>not eligible</strong> to claim the same tax deductions and expenses.</p>
+<p><span class="fas fa-times text-danger fa-lg"> </span> A PSB is <strong>not eligible </strong>for:</p>
+
+<ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
+<li class="cnjnctn-col"><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/t4012/t2-corporation-income-tax-guide-chapter-5-page-5-t2-return.html#P2969_218288">General tax rate reduction</a>  </li>
+<li class="cnjnctn-col"><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/t4012/t2-corporation-income-tax-guide-chapter-4-page-4-t2-return.html#P2862_208254">Small business deduction</a> </li>
+</ul>
+<p>This means that a PSB is subject to the <strong>full </strong><a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/corporations/corporation-tax-rates.html">federal and provincial corporate tax rates</a> on all taxable income, <strong>plus an additional 5%.</strong></p>
+
+<h3>Eligible expenses</h3>
+<p>A PSB is <strong>limited </strong>to <strong>all</strong> of the following deduction expenses: </p>
+<ul class="fa-ul">
+<li ><span class="fas fa-check fa-li fa-lg text-success"> </span> Salary and wages the corporation pays to its incorporated employee(s) </li>
+<li ><span class="fas fa-check fa-li fa-lg text-success"> </span> Any benefit or allowance the corporation provides to its incorporated employee(s) </li>
+<li ><span class="fas fa-check fa-li fa-lg text-success"> </span> Certain expenses of the corporation associated with selling property or negotiating contracts </li>
+<li ><span class="fas fa-check fa-li fa-lg text-success"> </span> Legal expenses incurred by the corporation in collecting amounts owing </li>
+</ul>
+
+
 <details><summary>Examples of <strong>non-compliance</strong> situation for PSB corporations</summary>
 <ul>
 <li>Not reporting non-active business income on line 207 of the T2 returns and did not complete Schedule 7 </li>
@@ -215,31 +232,6 @@
 
 <div data-ajax-replace="/cra-arc/payroll/guidance/tax-obligations-self.html#ajax-help"></div>
 
-
-<section id="psb-special" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg">	<header class="modal-header"><h2 class="modal-title">Tax deductions, tax rates and eligible expenses for a PSB</h2>
-	</header>	<div class="modal-body">		
-	
-<h3>Tax deductions and tax rates</h3>
-<p><span class="fas fa-times text-danger fa-lg"> </span> A PSB is <strong>not eligible </strong>for:</p>
-
-<ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
-<li class="cnjnctn-col"><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/t4012/t2-corporation-income-tax-guide-chapter-5-page-5-t2-return.html#P2969_218288">General tax rate reduction</a>  </li>
-<li class="cnjnctn-col"><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/t4012/t2-corporation-income-tax-guide-chapter-4-page-4-t2-return.html#P2862_208254">Small business deduction</a> </li>
-</ul>
-<p>This means that a PSB is subject to the <strong>full </strong><a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/corporations/corporation-tax-rates.html">federal and provincial corporate tax rates</a> on all taxable income, <strong>plus an additional 5%.</strong></p>
-
-
-<h3>Eligible expenses</h3>
-<p>A PSB is <strong>limited </strong>to <strong>all</strong> of the following deduction expenses: </p>
-<ul class="fa-ul">
-<li ><span class="fas fa-check fa-li fa-lg text-success"> </span> Salary and wages the corporation pays to its incorporated employee(s) </li>
-<li ><span class="fas fa-check fa-li fa-lg text-success"> </span> Any benefit or allowance the corporation provides to its incorporated employee(s) </li>
-<li ><span class="fas fa-check fa-li fa-lg text-success"> </span> Certain expenses of the corporation associated with selling property or negotiating contracts </li>
-<li ><span class="fas fa-check fa-li fa-lg text-success"> </span> Legal expenses incurred by the corporation in collecting amounts owing </li>
-</ul>
-
-
-	</div></section>
 
 
 
