--- a/payroll/guidance/tax-obligations-psb.html
+++ b/payroll/guidance/tax-obligations-psb.html
@@ -139,24 +139,24 @@
 <p>The PSB includes the amount of the payment received from the payer in their calculation of income earned using <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t2sch125.html">Schedule 125</a>, Income Statement Information when filing their T2 return. 
 
 <p>The PSB is <strong>not eligible</strong> to claim the same tax deductions and expenses.</p>
-<p><span class="fas fa-times text-danger fa-lg"> </span> A PSB is <strong>not eligible </strong>for:</p>
 
 <ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
-<li class="cnjnctn-col"><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/t4012/t2-corporation-income-tax-guide-chapter-5-page-5-t2-return.html#P2969_218288">General tax rate reduction</a>  </li>
+<li class="cnjnctn-col"><h3><span class="fas fa-times text-danger fa-lg"> </span>Tax deductions</h3>
+<ul class="list-unstyled cnjnctn-type-and">
+<li><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/t4012/t2-corporation-income-tax-guide-chapter-5-page-5-t2-return.html#P2969_218288">General tax rate reduction</a>  </li>
 <li class="cnjnctn-col"><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/t4012/t2-corporation-income-tax-guide-chapter-4-page-4-t2-return.html#P2862_208254">Small business deduction</a> </li>
 </ul>
 <p>This means that a PSB is subject to the <strong>full </strong><a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/corporations/corporation-tax-rates.html">federal and provincial corporate tax rates</a> on all taxable income, <strong>plus an additional 5%.</strong></p>
-
-<h3>Eligible expenses</h3>
-<p>A PSB is <strong>limited </strong>to <strong>all</strong> of the following deduction expenses: </p>
-<ul class="fa-ul">
-<li ><span class="fas fa-check fa-li fa-lg text-success"> </span> Salary and wages the corporation pays to its incorporated employee(s) </li>
-<li ><span class="fas fa-check fa-li fa-lg text-success"> </span> Any benefit or allowance the corporation provides to its incorporated employee(s) </li>
-<li ><span class="fas fa-check fa-li fa-lg text-success"> </span> Certain expenses of the corporation associated with selling property or negotiating contracts </li>
-<li ><span class="fas fa-check fa-li fa-lg text-success"> </span> Legal expenses incurred by the corporation in collecting amounts owing </li>
+</li>
+<li class="cnjnctn-col"><h3><span class="fas fa-check fa-li fa-lg text-success"> </span> Eligible expenses</h3>
+<ul class="list-unstyled cnjnctn-type-and">
+<li>Salary and wages the corporation pays to its incorporated employee(s) </li>
+<li>Any benefit or allowance the corporation provides to its incorporated employee(s) </li>
+<li>Certain expenses of the corporation associated with selling property or negotiating contracts </li>
+<li>Legal expenses incurred by the corporation in collecting amounts owing </li>
 </ul>
-
-
+</li>
+</ul>
 <details><summary>Examples of <strong>non-compliance</strong> situation for PSB corporations</summary>
 <ul>
 <li>Not reporting non-active business income on line 207 of the T2 returns and did not complete Schedule 7 </li>
