--- a/payroll/guidance/tax-obligations-psb.html
+++ b/payroll/guidance/tax-obligations-psb.html
@@ -141,15 +141,15 @@
 <p>The PSB is <strong>not eligible</strong> to claim the same tax deductions and expenses.</p>
 
 <ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
-<li class="cnjnctn-col"><h3><span class="fas fa-times text-danger fa-lg"> </span>Tax deductions</h3>
-<ul class="list-unstyled cnjnctn-type-and">
+<li class="cnjnctn-col"><h3><span class="fas fa-times text-danger fa-lg"> </span> Tax deductions</h3>
+<ul>
 <li><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/t4012/t2-corporation-income-tax-guide-chapter-5-page-5-t2-return.html#P2969_218288">General tax rate reduction</a>  </li>
 <li class="cnjnctn-col"><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/t4012/t2-corporation-income-tax-guide-chapter-4-page-4-t2-return.html#P2862_208254">Small business deduction</a> </li>
 </ul>
 <p>This means that a PSB is subject to the <strong>full </strong><a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/corporations/corporation-tax-rates.html">federal and provincial corporate tax rates</a> on all taxable income, <strong>plus an additional 5%.</strong></p>
 </li>
-<li class="cnjnctn-col"><h3><span class="fas fa-check fa-li fa-lg text-success"> </span> Eligible expenses</h3>
-<ul class="list-unstyled cnjnctn-type-and">
+<li class="cnjnctn-col"><h3><span class="fas fa-check fa-lg text-success"> </span> Eligible expenses</h3>
+<ul>
 <li>Salary and wages the corporation pays to its incorporated employee(s) </li>
 <li>Any benefit or allowance the corporation provides to its incorporated employee(s) </li>
 <li>Certain expenses of the corporation associated with selling property or negotiating contracts </li>
