--- a/payroll/guidance/tax-obligations-psb.html
+++ b/payroll/guidance/tax-obligations-psb.html
@@ -144,7 +144,7 @@
 <li class="cnjnctn-col"><h3>Tax deductions</h3>
 <ul class="fa-ul">
 <li><span class="fas fa-times text-danger fa-li"> </span> <strong> Not eligible </strong>for the <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/t4012/t2-corporation-income-tax-guide-chapter-5-page-5-t2-return.html#P2969_218288">general tax rate reduction</a>  </li>
-<li><span class="fas fa-times text-danger fa-li "> </span> <strong>  Not eligible </strong> for the <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/t4012/t2-corporation-income-tax-guide-chapter-4-page-4-t2-return.html#P2862_208254">small business deduction</a> </li>
+<li><span class="fas fa-times text-danger fa-li "> </span> <strong>  Not eligible </strong> to claim the <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/t4012/t2-corporation-income-tax-guide-chapter-4-page-4-t2-return.html#P2862_208254">small business deduction</a> on line 430 of the T2 return</li>
 </ul>
 <p class="mrgn-tp-lg">This means that a PSB is subject to the <strong>full </strong><a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/corporations/corporation-tax-rates.html">federal and provincial corporate tax rates</a> on all taxable income, <strong>plus an additional 5%.</strong></p>
 </li>
@@ -160,7 +160,6 @@
 <details><summary>Examples of <strong>non-compliance</strong> situation for PSB corporations</summary>
 <ul>
 <li>Not reporting non-active business income on line 207 of the T2 returns and did not complete Schedule 7 </li>
-<li>Claiming the small business deduction on line 430 of the T2  return </li>
 <li>Claiming other deductions that was not allowed on the T2 return </li>
 <li>Claiming salary expense on the T2 return </li>
 <li>Not filing T2 returns </li>
