--- a/payroll/guidance/tax-obligations-psb.html
+++ b/payroll/guidance/tax-obligations-psb.html
@@ -150,9 +150,9 @@
 </li>
 <li class="cnjnctn-col"><h3>Eligible expenses</h3>
 <ul class="fa-ul">
-<li><span class="fas fa-check text-success"> </span> Salary and wages the corporation pays to its incorporated employee(s) </li>
-<li><span class="fas fa-check text-success"> </span> Any benefit or allowance the corporation provides to its incorporated employee(s) </li>
-<li><span class="fas fa-check text-success"> </span> Certain expenses of the corporation associated with selling property or negotiating contracts </li>
+<li><span class="fas fa-check text-success"> </span> Salary and wages the corporation pays to their employees performing the services of a PSB</li>
+<li><span class="fas fa-check text-success"> </span> Any benefit or allowance the corporation provides to their employees performing the services of a PSB</li>
+<li><span class="fas fa-check text-success"> </span> Certain expenses of the corporation associated with selling property or negotiating contracts</li>
 <li><span class="fas fa-check text-success"> </span> Legal expenses incurred by the corporation in collecting amounts owing </li>
 </ul>
 </li>
