--- a/payroll/guidance/tax-obligations-psb.html
+++ b/payroll/guidance/tax-obligations-psb.html
@@ -134,7 +134,7 @@
 
 
 <h2 id="1a">Reporting the income earned on the income tax return</h2>
-<p>Generally, the payer <strong>must</strong> provide the PSB with a slip which includes any fees or other amounts paid for services.</p>
+<p>Generally, the payer <strong>must</strong> provide the PSB with a T4A slip which includes any fees or other amounts paid for services. Depending on the situation, the payer may provide the PSB with a T4A-NR, T5018 or T1204 instead.</p>
 
 <p>The PSB includes the amount of the payment received from the payer in their calculation of income earned using <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t2sch125.html">Schedule 125</a>, Income Statement Information when filing their T2 return. 
 
