--- a/payroll/guidance/tax-obligations-psb.html
+++ b/payroll/guidance/tax-obligations-psb.html
@@ -138,7 +138,15 @@
 
 <p>When filing the <strong>T2 return</strong>, the PSB must:</p>
 <ul>
-<li>Include the amount of the payment received from the payer in their calculation of income earned using <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t2sch125.html">Schedule 125</a>, Income Statement Information</li>
+<li>Include the amount of the payment received from the payer in their calculation of income earned using <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t2sch125.html">Schedule 125</a>, Income Statement Information, the PSB can only include the following <strong>eligible expenses</strong>:
+<ul class="fa-ul">
+<li><span class="fas fa-check text-success"> </span> Salary and wages the corporation pays to their employees performing the services of a PSB</li>
+<li><span class="fas fa-check text-success"> </span> Any benefit or allowance the corporation provides to their employees performing the services of a PSB</li>
+<li><span class="fas fa-check text-success"> </span> Certain expenses of the corporation associated with selling property or negotiating contracts</li>
+<li><span class="fas fa-check text-success"> </span> Legal expenses incurred by the corporation in collecting amounts owing </li>
+</ul>
+ </li>
+
 <li>Add info here <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t2sch125.html">Schedule 7</a>, add the name </li>
 </ul>
 
