--- a/payroll/guidance/tax-obligations-psb.html
+++ b/payroll/guidance/tax-obligations-psb.html
@@ -146,28 +146,10 @@
 <li><span class="fas fa-check text-success"> </span> Legal expenses incurred by the corporation in collecting amounts owing </li>
 </ul>
  </li>
+<li>Use the <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/corporations/corporation-tax-rates.html">federal and provincial corporate tax rates</a> on all taxable income, <strong>plus an additional 5%</strong> (the PSB is <strong>not eligible </strong>for the general tax rate reduction)</li>
+<li><strong>Not eligible </strong> to claim the <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/t4012/t2-corporation-income-tax-guide-chapter-4-page-4-t2-return.html#P2862_208254">small business deduction</a> on line 430 of the T2 return</li>
 
 <li>Add info here <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t2sch125.html">Schedule 7</a>, add the name </li>
-</ul>
-
-<p>The PSB is <strong>not eligible</strong> to claim the same tax deductions and expenses.</p>
-
-<ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
-<li class="cnjnctn-col"><h3>Tax deductions</h3>
-<ul class="fa-ul">
-<li><span class="fas fa-times text-danger fa-li"> </span> <strong> Not eligible </strong>for the <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/t4012/t2-corporation-income-tax-guide-chapter-5-page-5-t2-return.html#P2969_218288">general tax rate reduction</a>  </li>
-<li><span class="fas fa-times text-danger fa-li "> </span> <strong>  Not eligible </strong> to claim the <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/t4012/t2-corporation-income-tax-guide-chapter-4-page-4-t2-return.html#P2862_208254">small business deduction</a> on line 430 of the T2 return</li>
-</ul>
-<p class="mrgn-tp-lg">This means that a PSB is subject to the <strong>full </strong><a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/corporations/corporation-tax-rates.html">federal and provincial corporate tax rates</a> on all taxable income, <strong>plus an additional 5%.</strong></p>
-</li>
-<li class="cnjnctn-col"><h3>Eligible expenses</h3>
-<ul class="fa-ul">
-<li><span class="fas fa-check text-success"> </span> Salary and wages the corporation pays to their employees performing the services of a PSB</li>
-<li><span class="fas fa-check text-success"> </span> Any benefit or allowance the corporation provides to their employees performing the services of a PSB</li>
-<li><span class="fas fa-check text-success"> </span> Certain expenses of the corporation associated with selling property or negotiating contracts</li>
-<li><span class="fas fa-check text-success"> </span> Legal expenses incurred by the corporation in collecting amounts owing </li>
-</ul>
-</li>
 </ul>
 
  <p>Learn more:</p>
