--- a/payroll/guidance/tax-obligations-psb.html
+++ b/payroll/guidance/tax-obligations-psb.html
@@ -146,10 +146,9 @@
 <li><span class="fas fa-check text-success"> </span> Legal expenses incurred by the corporation in collecting amounts owing </li>
 </ul>
  </li>
+<li>Use <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t2sch7.html">Schedule 7</a>, Schedule 7, Aggregate Investment Income and Income Eligible for the Small Business Deduction to purpose... what to not include? </li>
 <li>Use the <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/corporations/corporation-tax-rates.html">federal and provincial corporate tax rates</a> on all taxable income, <strong>plus an additional 5%</strong> (the PSB is <strong>not eligible </strong>for the general tax rate reduction)</li>
 <li><strong>Not eligible </strong> to claim the <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/t4012/t2-corporation-income-tax-guide-chapter-4-page-4-t2-return.html#P2862_208254">small business deduction</a> on line 430 of the T2 return</li>
-
-<li>Add info here <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t2sch125.html">Schedule 7</a>, add the name </li>
 </ul>
 
  <p>Learn more:</p>
