--- a/payroll/guidance/tax-obligations-psb.html
+++ b/payroll/guidance/tax-obligations-psb.html
@@ -146,7 +146,7 @@
 <li><span class="fas fa-check text-success"> </span> Legal expenses incurred by the corporation in collecting amounts owing </li>
 </ul>
  </li>
-<li>Report the PSB's income on line 520 of <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t2sch7.html">Schedule 7</a>, Aggregate Investment Income and Income Eligible for the Small Business Deduction</li>
+<li>Report the PSB's income on line 520 of <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t2sch7.html">Schedule 7</a>, Aggregate Investment Income and Income Eligible for the Small Business Deduction because a PSB is <strong>not</strong> eligible for the small business deduction</li>
 <li>Report the PSB's income on line 432 of the T2 return because a PSB is <strong>not</strong> eligible for the general tax reduction</li>
 <li>Report the PSB's income on line 555 of the T2 return because they are subject to <strong>an additional 5%</strong></li>
 
