--- a/payroll/guidance/tax-obligations-psb.html
+++ b/payroll/guidance/tax-obligations-psb.html
@@ -138,7 +138,7 @@
 
 <p>When filing the <strong>T2 return</strong>, the PSB must:</p>
 <ul>
-<li><strong>Only</strong> include the following <strong>eligible expenses</strong> on <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t2sch125.html">Schedule 125</a>, Income Statement Information:
+<li><strong>Only</strong> claim the following <strong>eligible expenses</strong> on <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t2sch125.html">Schedule 125</a>, Income Statement Information:
 <ul class="fa-ul">
 <li><span class="fas fa-check text-success"> </span> Salary and wages the corporation pays to their employees performing the services of a PSB</li>
 <li><span class="fas fa-check text-success"> </span> Any benefit or allowance the corporation provides to their employees performing the services of a PSB</li>
@@ -146,11 +146,10 @@
 <li><span class="fas fa-check text-success"> </span> Legal expenses incurred by the corporation in collecting amounts owing </li>
 </ul>
  </li>
-<li>Report the PSB's income on line 520 of <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t2sch7.html">Schedule 7</a>, Aggregate Investment Income and Income Eligible for the Small Business Deduction because a PSB is <strong>not</strong> eligible for the small business deduction</li>
+<li>Report the PSB's income on line 520 of <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t2sch7.html">Schedule 7</a>, Aggregate Investment Income and Income Eligible for the Small Business Deduction (SBD) because they are <strong>not</strong> eligible for the SBD</li>
 <li>Report the PSB's income on line 432 of the T2 return because a PSB is <strong>not</strong> eligible for the general tax reduction</li>
 <li>Report the PSB's income on line 555 of the T2 return because they are subject to <strong>an additional 5%</strong></li>
 
-<li>Use the <strong>full</strong> <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/corporations/corporation-tax-rates.html">federal and provincial corporate tax rates</a> on all taxable income, <strong>plus an additional 5%</strong> (the PSB is <strong>not eligible </strong>for the general tax rate reduction)</li>
 <li><strong>Not eligible </strong> to claim the <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/t4012/t2-corporation-income-tax-guide-chapter-4-page-4-t2-return.html#P2862_208254">small business deduction</a> on line 430 of the T2 return</li>
 </ul>
 
