--- a/payroll/guidance/tax-obligations-psb.html
+++ b/payroll/guidance/tax-obligations-psb.html
@@ -147,10 +147,9 @@
 </ul>
  </li>
 <li>Report the PSB's income on line 520 of <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t2sch7.html">Schedule 7</a>, Aggregate Investment Income and Income Eligible for the Small Business Deduction (SBD) because they are <strong>not</strong> eligible for the SBD</li>
-<li>Report the PSB's income on line 432 of the T2 return because a PSB is <strong>not</strong> eligible for the general tax reduction</li>
+<li>Report the PSB's income on line 432 of the T2 return because they are <strong>not</strong> eligible for the general tax reduction</li>
 <li>Report the PSB's income on line 555 of the T2 return because they are subject to <strong>an additional 5%</strong></li>
-
-<li><strong>Not eligible </strong> to claim the <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/t4012/t2-corporation-income-tax-guide-chapter-4-page-4-t2-return.html#P2862_208254">small business deduction</a> on line 430 of the T2 return</li>
+<li><strong>Do not </strong> to claim the SBD on line 430 of the T2 return because they are <strong>not</strong> eligible for the SBD</li>
 </ul>
 
  <p>Learn more:</p>
