--- a/payroll/guidance/tax-obligations-psb.html
+++ b/payroll/guidance/tax-obligations-psb.html
@@ -127,14 +127,22 @@
  <details id="tab1"><summary>PSB</summary>
 <p>Understanding the PSB's tax obligations:</p>
 <ul>
+<li><a href="#1">Receiving the slip</a> </li>
 <li><a href="#1a">Reporting the income earned on the income tax return</a> </li>
 <li><a href="#1b">Contributing to the CPP/QPP, EI and QPIP</a> </li>
 <li><a href="#1c">Withholding, remitting and reporting deductions for employees of the PSB</a> </li>
 </ul> 
 
+<h2 id="1">Receiving the slip</h2>
+<p>Generally, the payer <strong>must</strong> provide the PSB with a T4A slip which includes any fees or other amounts paid for services. Depending on the situation, the payer may provide the PSB with a T4A-NR, T5018 or T1204 instead.</p>
+
+ <p>Learn more: </p>
+ <ul>
+ <li> <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/payroll-deductions-contributions/special-payments/fees-other-amounts-services.html">Payments of fees for services</a></li>
+<li>Options if the PSB does not expect to get the slip, <a href="https://www.canada.ca/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/tax-return/completing-a-tax-return/tax-slips/a-copy-your-tax-slips.html">Get a copy of a slip</a></li>
+ </ul>	
 
 <h2 id="1a">Reporting the income earned on the income tax return</h2>
-<p>Generally, the payer <strong>must</strong> provide the PSB with a T4A slip which includes any fees or other amounts paid for services. Depending on the situation, the payer may provide the PSB with a T4A-NR, T5018 or T1204 instead.</p>
 
 <p>When filing the <strong>T2 return</strong>, the PSB must:</p>
 <ul>
@@ -152,12 +160,7 @@
 <li><strong>Do not </strong> to claim the SBD on line 430 of the T2 return because they are <strong>not</strong> eligible for the SBD</li>
 </ul>
 
- <p>Learn more:</p>
-	<ul> 
-<li><a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/corporations/corporation-income-tax-return/completing-your-corporation-income-tax-t2-return.html">Completing your corporation income tax return </a></li>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/payroll-deductions-contributions/special-payments/fees-other-amounts-services.html">Payments of fees for services</a></li>
-	</ul>
-
+<p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/corporations/corporation-income-tax-return/completing-your-corporation-income-tax-t2-return.html">Completing your corporation income tax return</a></p>
 
 <h2 id="1b">Contributing to the CPP/QPP, EI and QPIP</h2>
 <p>Generally, the PSB includes the amount of the payment received from the payer in their calculation of the following contributions when filing their income tax return:</p>
@@ -184,16 +187,28 @@
 <details id="tab2"> <summary>Payer</summary>
 <p>Understanding the payer's tax obligations:</p>
 <ul>
-<li><a href="#1A">Withholding, remitting and reporting deductions from the payment</a> </li>
-<li><a href="#2B">Reporting the payment on the income tax return</a> </li>
+<li><a href="#2A">Withholding, remitting and reporting deductions from the payment</a> </li>
+<li><a href="#2B">Distributing the slip</a> </li>
+<li><a href="#2C">Reporting the payment on the income tax return</a> </li>
 </ul> 
 
 <h2 id="1A">Withholding, remitting and reporting deductions from the payment</h2>
-<p>Generally, if the payer pays a fee to a PSB to provide a service outside of an employment relationship or tenure of office, the payer <strong>must</strong> fill out a T4A slip. This includes payments of fees for services between businesses, including sole proprietors and corporations. Depending on the situation, the payer may need to fill out a T4A-NR, T5018 or T1204 instead.</p>
+<p>The withholding, remitting and reporting are different depending on <strong>who the payment is made to</strong>.</p>
 
 <p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/payroll-deductions-contributions/special-payments/fees-other-amounts-services.html">Payments of fees for services</a></p>
 
-<h2 id="1B">Reporting the payment on the income tax return</h2>
+<h2 id="2B">Distributing the slip</h2>
+<p>Generally, if the payer pays a fee to a PSB to provide a service outside of an employment relationship or tenure of office, the payer <strong>must</strong> fill out a T4A slip. This includes payments of fees for services between businesses, including sole proprietors and corporations. Depending on the situation, the payer may need to fill out a T4A-NR, T5018 or T1204 instead.</p>
+
+<p>If the payer distributes the slips late or does not distribute, the payer may be assessed a penalty of $25 per day per slip with a minimum penalty of $100 and a maximum of $2,500.</p>
+
+<p>Learn more:</p>
+<ul>
+<li> <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/payroll-deductions-contributions/special-payments/fees-other-amounts-services.html">Payments of fees for services</a></li>
+<li>Obligations to distribute the slip: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/file-information-returns-slip-summaries/distribute-slips.html#h_3">Distribute the slips</a></li>
+</ul>
+
+<h2 id="2C">Reporting the payment on the income tax return</h2>
 <p>Generally, the payer includes the payment made to the worker in their calculation of business expenses using one of the following form when filing their income tax return:</p>
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
 <li class="cnjnctn-col"><h4>T1 return</h4> 
